implemented demo version mini site fixed pagination issue some other modify
Signed-off-by: TomWu <phperwuhan@gmail.com>

--- a/miniSite/site/smarty_run/templates/forumList.html
+++ b/miniSite/site/smarty_run/templates/forumList.html
@@ -1,20 +1,15 @@
 {* forum list *}
 {* 页首 *}
 {include file="public_header.html"}
-<script language="javascript">
-{literal}
-{/literal}
-</script>
 <body id="vanilla_discussions_index" class="Vanilla Discussions index">
 <div id="Frame">
     <div class="Banner">
 		<ul>
-		  <li><a href="http://192.168.0.101/vanilla_2-0-18-8/discussions" class="">Discussions</a></li>
+		  <li><a href="{tplEchoUrl mainName='MainForum.php' cmd='forumList'}" class="">Forum List</a></li>
 		  
 		  
 		  
 		  
-		  			 <li class="SignInItem"><a href="http://192.168.0.101/vanilla_2-0-18-8/entry/signin" class="SignIn">Sign In</a></li>
 		  		</ul>
 	 </div>
 	 <div id="Body">
@@ -22,14 +17,12 @@
 		  <ul class="DataList Discussions">
 <li class="Item">
       <div class="ItemContent Discussion">
-        <div><a href="#">forum 1</a></div>
-        <div>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">forum 2</a></div>
-        <div>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">forum 3</a></div>
-        <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">forum 4</a></div>
-        <div><a href="#">forum 5</a></div>
-        <div>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">forum 6</a></div>
-        <div><a href="#">forum 7</a></div>
-        <div>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">forum 8</a></div>
+        {foreach from=$objsMnEtForum item=oMnEtForum}
+        <div><a href="{tplEchoUrl mainName='MainTopic.php' cmd='threadList' vName='fid' vValue=$oMnEtForum->forumId->oriValue}">{$oMnEtForum->forumName->oriValue|escape:"html"}</a></div>
+            {foreach from=$oMnEtForum->objsSubMnEtForum item=oSubMnEtForum}
+            <div>&nbsp;&nbsp;&nbsp;&nbsp;<a href="{tplEchoUrl mainName='MainTopic.php' cmd='threadList' vName='fid' vValue=$oSubMnEtForum->forumId->oriValue}">{$oSubMnEtForum->forumName->oriValue|escape:"html"}</a></div>
+            {/foreach}
+        {/foreach}
    </div>
 </li>
 </ul>
