--- a/miniSite/site/smarty_run/templates/getThread.html
+++ b/miniSite/site/smarty_run/templates/getThread.html
@@ -1,63 +1,45 @@
 {* get thread *}
 {* 页首 *}
 {include file="public_header.html"}
-<script language="javascript">
-{literal}
-{/literal}
-</script>
 <body id="vanilla_discussion_index" class="Vanilla Discussion Index ">
   <div id="Frame">
 	 <div class="Banner">
 		<ul>
-		  <li><a href="http://192.168.0.101/vanilla_2-0-18-8/discussions" class="">Discussions</a></li>
+		  <li><a href="{tplEchoUrl mainName='MainForum.php' cmd='forumList'}" class="">Forum List</a></li>
 		  
 		  
-		  
-		  
-		  			 <li class="SignInItem"><a href="http://192.168.0.101/vanilla_2-0-18-8/entry/signin" class="SignIn">Sign In</a></li>
 		  		</ul>
 	 </div>
 	 <div id="Body">
 		<div id="Content">
 		  <div class="Tabs HeadingTabs DiscussionTabs FirstPage">
-   
-   <ul>
-      <li><a href="http://192.168.0.101/vanilla_2-0-18-8/categories/hello-world" class="TabLink">hello world</a></li>
-   </ul>
-   <div class="SubTab">test topic</div>
+   <div class="SubTab">{$data.topic->topicTitle->oriValue|escape:html}</div>
 </div>
 <ul class="DataList MessageList Discussion FirstPage">
-<li class="Item Comment" id="Comment_9">
+{foreach from=$data.posts item=oMnEtForumPost}
+<li class="Item Comment" id="Comment_{$oMnEtForumPost->postId->oriValue}">
    <div class="Comment">
       <div class="Meta">
+        {if $oMnEtForumPost->oAuthorMnEtUser}
                   <span class="Author">
-            <a href="http://192.168.0.101/vanilla_2-0-18-8/profile/1/admin">admin</a>         </span>
+            <a href="#">{$oMnEtForumPost->oAuthorMnEtUser->userName->oriValue|escape:html}</a>         </span>
+        {/if}
          <span class="DateCreated">
-            <a href="http://192.168.0.101/vanilla_2-0-18-8/discussion/comment/9#Comment_9" class="Permalink" name="Item_2" rel="nofollow">July 5</a>         </span>
+            {$oMnEtForumPost->postTime->oriValue|date_format}
+         </span>
                   <div class="CommentInfo">
                      </div>
                </div>
-      <div class="Message">
-			jlj;lklj;lkj		</div>
-         </div>
+      <div class="Message">{$oMnEtForumPost->postContent->mnDisplayValue}</div>
+   </div>
 </li>
-<li class="Item Comment" id="Comment_10">
-   <div class="Comment">
-      <div class="Meta">
-                  <span class="Author">
-            <a href="http://192.168.0.101/vanilla_2-0-18-8/profile/1/admin">admin</a>         </span>
-         <span class="DateCreated">
-            <a href="http://192.168.0.101/vanilla_2-0-18-8/discussion/comment/10#Comment_10" class="Permalink" name="Item_3" rel="nofollow">July 5</a>         </span>
-                  <div class="CommentInfo">
-                     </div>
-               </div>
-      <div class="Message">
-			dddddddddddddd		</div>
-         </div>
-</li>
+{/foreach}
 </ul>
+{$data.oMnDataPage->echoPage()}
    <div class="Foot">
+    <!--
       <a href="http://192.168.0.101/vanilla_2-0-18-8/entry/signin?Target=discussion%2F11%2Ftest-topic%3Fpost%23Form_Body" class="TabLink">Add a Comment</a> 
+      -->
    </div>
    
 		</div>
