--- a/miniSite/site/smarty_run/templates/public_header.html
+++ b/miniSite/site/smarty_run/templates/public_header.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-ca">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>{$title}</title>
+    <title>{$title|escape:"html"}</title>
     <link rel="stylesheet" type="text/css" href="{$smarty.const.MPF_C_APP_CSS_URL}style.css" media="all">
     <link rel="stylesheet" type="text/css" href="{$smarty.const.MPF_C_APP_CSS_URL}custom.css" media="all">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0">
