--- a/miniSite/site/smarty_run/templates/forumList.html
+++ b/miniSite/site/smarty_run/templates/forumList.html
@@ -31,7 +31,9 @@
 	 </div>
 	 <div id="Foot">
 		<div class="FootMenu">
-        <span><a href="#">Full Site</a></span>
+		    <!--
+        <span><a href="#" class="">Full Site</a></span>
+            -->
 		</div>
 		<div>
 		  <a href="http://tapatalk.com/"><span>Powered by Tapatalk</span></a>
