--- a/miniSite/site/smarty_run/templates/threadList.html
+++ b/miniSite/site/smarty_run/templates/threadList.html
@@ -32,7 +32,7 @@
 	 </div>
 	 <div id="Foot">
 		<div class="FootMenu">
-        <span><a href="{$tapatalkPluginApiConfig.nativeSiteUrl}profile/nomobile" class="">Full Site</a></span>
+        <span><a href="{$tapatalkPluginApiConfig.nativeSitePcModeUrl}" class="">Full Site</a></span>
 		</div>
 		<div>
 		  <a href="http://tapatalk.com/"><span>Powered by Tapatalk</span></a>
