--- a/minisite/site/smarty_run/templates/forumList.html
+++ b/minisite/site/smarty_run/templates/forumList.html
@@ -5,7 +5,7 @@
 <div id="Frame">
     <div class="Banner">
 		<ul>
-		  <li><a href="{tplEchoUrl mainName='MainForum.php' cmd='forumList'}" class="">Forum List</a></li>
+		  <li><a href="{tplEchoUrl mainName='MainForum.php' cmd='forumList'}" class="">All Forums</a></li>
 		  
 		  
 		  
@@ -14,19 +14,37 @@
 	 </div>
 	 <div id="Body">
 		<div id="Content">
-		  <ul class="DataList Discussions">
-<li class="Item">
-      <div class="ItemContent Discussion">
-        {foreach from=$objsMnEtForum item=oMnEtForum}
-        <div><a href="{tplEchoUrl mainName='MainTopic.php' cmd='threadList' vName='fid' vValue=$oMnEtForum->forumId->oriValue}">{$oMnEtForum->forumName->oriValue|escape:"html"}</a></div>
-            {foreach from=$oMnEtForum->objsSubMnEtForum item=oSubMnEtForum}
-            <div>&nbsp;&nbsp;&nbsp;&nbsp;<a href="{tplEchoUrl mainName='MainTopic.php' cmd='threadList' vName='fid' vValue=$oSubMnEtForum->forumId->oriValue}">{$oSubMnEtForum->forumName->oriValue|escape:"html"}</a></div>
-            {/foreach}
-        {/foreach}
-   </div>
-</li>
+<ul class="DataList CategoryList">
+    {foreach from=$objsMnEtForum item=oMnEtForum}
+    <li class="Item Depth1 Unread">
+               <div class="ItemContent Category Unread"><a href="{tplEchoUrl mainName='MainTopic.php' cmd='threadList' vName='fid' vValue=$oMnEtForum->forumId->oriValue}" class="Title">{$oMnEtForum->forumName->oriValue|escape:"html"}</a><div class="CategoryDescription">{$oMnEtForum->description->oriValue|escape:"html"}</div><div class="Meta">
+                     <span class="DiscussionCount">{$oMnEtForum->totalTopicNum->oriValue} discussions</span>
+                     </div>
+               </div>
+    </li>
+               {foreach from=$oMnEtForum->objsSubMnEtForum item=oLv2MnEtForum}
+    <li class="Item Depth2 Read">
+               <div class="ItemContent Category Read"><a href="{tplEchoUrl mainName='MainTopic.php' cmd='threadList' vName='fid' vValue=$oLv2MnEtForum->forumId->oriValue}" class="Title">{$oLv2MnEtForum->forumName->oriValue|escape:"html"}</a><div class="CategoryDescription">{$oLv2MnEtForum->description->oriValue|escape:"html"}</div><div class="Meta">
+                     <span class="DiscussionCount">{$oLv2MnEtForum->totalTopicNum->oriValue} discussions</span>
+                     {if $oLv2MnEtForum->objsSubMnEtForum}
+                     <span class="ChildCategories"><b>Child Categories:</b> 
+                        {foreach from=$oLv2MnEtForum->objsSubMnEtForum item=oLv3MnEtForum}
+                        <a href="{tplEchoUrl mainName='MainTopic.php' cmd='threadList' vName='fid' vValue=$oLv3MnEtForum->forumId->oriValue}">{$oLv3MnEtForum->forumName->oriValue|escape:"html"}</a>, 
+                            {foreach from=$oLv3MnEtForum->objsSubMnEtForum item=oLv4MnEtForum}
+                        <a href="{tplEchoUrl mainName='MainTopic.php' cmd='threadList' vName='fid' vValue=$oLv4MnEtForum->forumId->oriValue}">{$oLv4MnEtForum->forumName->oriValue|escape:"html"}</a>, 
+                                {foreach from=$oLv4MnEtForum->objsSubMnEtForum item=oLv5MnEtForum}
+                        <a href="{tplEchoUrl mainName='MainTopic.php' cmd='threadList' vName='fid' vValue=$oLv5MnEtForum->forumId->oriValue}">{$oLv5MnEtForum->forumName->oriValue|escape:"html"}</a>, 
+                                {/foreach}
+                            {/foreach}
+                        {/foreach}
+                     </span>
+                     {/if}
+                     </div>
+               </div>
+    </li>
+               {/foreach}
+    {/foreach}
 </ul>
-
 		</div>
 	 </div>
 	 <div id="Foot">
