--- a/minisite/site/smarty_run/templates/forumList.html
+++ b/minisite/site/smarty_run/templates/forumList.html
@@ -49,7 +49,7 @@
 	 </div>
 	 <div id="Foot">
 		<div class="FootMenu">
-        <span><a href="{$tapatalkPluginApiConfig.nativeSitePcModeUrl}" class="">Full Site</a></span>
+        <span>{if $tapatalkPluginApiConfig.nativeSitePcModeUrl}<a href="{$tapatalkPluginApiConfig.nativeSitePcModeUrl}" class="">Full Site</a>{/if}</span>
 		</div>
 		<div>
 		  <a href="http://tapatalk.com/"><span>Powered by Tapatalk</span></a>
